--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,9 @@
 <button id="rleft">left</button>
 <button id="reverse">reverse</button>
 <button id="rright">right</button>
+<br>
+<p id="batV">batV</p><br>
+<p id="batI">batI</p><br>
+
     <script type="text/javascript" src="update.js"></script>
 </body>
