added pitch and yaw control servos

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,9 @@
 <button id="reverse">reverse</button>
 <button id="rright">right</button>
 <br>
+pitch:<input id="pitch"></input><br>
+yaw:<input id="yaw"></input><br>
+<button id="camera">update camera</button><br>
 <p id="batV">batV</p><br>
 <p id="batI">batI</p><br>
 
