changed web interface to control camera only

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <style>html * { user-select: none; }</style>
 </head>
 <body>
+<!--
 <button id="left">left</button>
 <button id="forward">forward</button>
 <button id="right">right</button><br>
@@ -12,8 +13,11 @@
 pitch:<input id="pitch"></input><br>
 yaw:<input id="yaw"></input><br>
 <button id="camera">update camera</button><br>
+-->
 <p id="batV">batV</p><br>
 <p id="batI">batI</p><br>
+<img id="view" src="images/preview.jpg" onclick="sendpos(event)"><br>
 
     <script type="text/javascript" src="update.js"></script>
+
 </body>
