changed opencv to ffmpeg, scaled picture to full screen height

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@ yaw:<input id="yaw"></input><br>
 -->
 <p id="batV">batV</p><br>
 <p id="batI">batI</p><br>
-<img id="view" src="images/preview.jpg" onclick="sendpos(event)"><br>
+<img id="view" src="images/preview.jpg" height=100% onclick="sendpos(event)"><br>
 
     <script type="text/javascript" src="update.js"></script>
 
