canbus seems to be working

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <head>
 <style>html * { user-select: none; }</style>
 </head>
-<body>
+<body style="background-color:black;">
 <!--
 <button id="left">left</button>
 <button id="forward">forward</button>
