cleaned up html

--- a/html/index.html
+++ b/html/index.html
@@ -13,10 +13,10 @@
 pitch:<input id="pitch"></input><br>
 yaw:<input id="yaw"></input><br>
 <button id="camera">update camera</button><br>
--->
 <p id="batV">batV</p><br>
 <p id="batI">batI</p><br>
-<img id="view" src="images/preview.jpg" height=100% onclick="sendpos(event)"><br>
+-->
+<img id="view" src="images/preview.jpg" height=100% onclick="sendpos(event)">
 
     <script type="text/javascript" src="update.js"></script>
 
